--- a/worddish/index.html
+++ b/worddish/index.html
@@ -9,11 +9,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>WordDish</title>
-    <meta name="description" content="">
+    <meta name="description" content="Word Dish Worddish web game webgame">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="jquery.ui.touch-punch.min.js"></script>
+
 </head>
 
 <body>
