fixes and performace

--- a/worddish/index.html
+++ b/worddish/index.html
@@ -75,7 +75,7 @@
             Drag, Mix and Match letters to form 4 letter words in the small square space you have.<br />Words cannot be repeated.<br /><br />
             Try to complete all<br /><span class="objective">Objective Words</span><br /><br />
             Be careful not to fill your board, but if you do, there are some cleaners on the bottom.<br />Simply drag them on top of a letter to erase it.<br /><br />
-            Made in only 5 hours for the LUDUM DARE in October 2023!<br /><br />
+            Made for the LUDUM DARE in October 2023!<br /><br />
             <a href="./5/"><span class="doneword">5 letter version</span></a>
         </div>
     </div>
