--- a/worddish/5/index.html
+++ b/worddish/5/index.html
@@ -80,7 +80,7 @@
     <div id="donewords"></div>
     <div id="instructions">
         <div class="inner">
-            <a onclick="$('#instructions').hide()"><span class="doneword">Start Game</span></a><br /><br />
+            <a onclick="$('#instructions').hide(); $('#startGameButton').text('Return to Game')"><span id="startGameButton" class="doneword">Start Game</span></a><br /><br />
             Drag, Mix and Match letters to form 4 letter words in the small square space you have.<br />Words cannot be repeated.<br /><br />
             Try to complete all<br /><span class="objective">Objective Words</span><br /><br />
             Be careful not to fill your board, but if you do, there are some cleaners on the bottom.<br />Simply drag them on top of a letter to erase it.<br /><br />
@@ -88,6 +88,14 @@
             <a href="./5/"><span class="doneword">5 letter version</span></a>
         </div>
     </div>
+    <div id="finish">
+        Congratulations!<br />
+        You Win!
+        <a onclick="$('#finish').hide()"><span class="doneword">Start Game</span></a><br /><br />
+        <a onclick="$('#finish').hide()"><span class="doneword">Keep Playing</span></a>
+        <a onclick="location.reload()"><span class="doneword">Restart</span></a>
+    </div>
+
     <script src="game.js"></script>
 </body>
 
