--- a/worddish/index.html
+++ b/worddish/index.html
@@ -71,7 +71,7 @@
     <script src="game.js"></script>
     <div id="instructions">
         <div class="inner">
-            <a onclick="$('#instructions').hide()"><span class="doneword">Start Game</span></a><br /><br />
+            <a onclick="$('#instructions').hide(); $('#startGameButton').text('Return to Game');"><span id="startGameButton" class="doneword">Start Game</span></a><br /><br />
             Drag, Mix and Match letters to form 4 letter words in the small square space you have.<br />Words cannot be repeated.<br /><br />
             Try to complete all<br /><span class="objective">Objective Words</span><br /><br />
             Be careful not to fill your board, but if you do, there are some cleaners on the bottom.<br />Simply drag them on top of a letter to erase it.<br /><br />
@@ -82,6 +82,12 @@
     <a id="instructions-button2" onclick="$('#instructions').show()">
         <div class="objective">?</div>
     </a>
+    <div id="finish">
+        Congratulations!<br />
+        You Win!<br/><br/>
+        <a onclick="$('#finish').hide()"><span class="doneword">Keep Playing</span></a><br/>
+        <a onclick="location.reload()"><span class="doneword">Restart</span></a>
+    </div>
 </body>
 
 </html>
