--- a/lolquiz/index.html
+++ b/lolquiz/index.html
@@ -203,6 +203,7 @@
 </head>
 
 <body>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src='../patreonbutton.js'></script>
     <script src='../backbutton.js'></script>
 
@@ -223,6 +224,11 @@
     </div>
 
     <script>
+        downloadData();
+    </script>
+    <script>
+
+        return;
 
         const col = 130;
         const mid = 20;
